# fastapi-docker

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  start.sh
.devcontainer/: devcontainer.json
api/: db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
tests/: test_main.py
